modules/gdscript/tests/scripts/analyzer/errors/variable_name_shadows_builtin_type.gd
var Hector2

func test():
	pass
